--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose",
+    "lint": "eslint ."
   },
   "author": "Mikko Paajanen",
   "license": "ISC",
@@ -17,6 +18,13 @@
     "mongoose": "^5.8.0"
   },
   "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
